# playerctl-rust-wrapper

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: basic.rs
src/: lib.rs
